UI Changes for ICS module

--- a/src/app/ICS/ics-calibrationmaster/ics-calibrationmaster.component.html
+++ b/src/app/ICS/ics-calibrationmaster/ics-calibrationmaster.component.html
@@ -11,8 +11,8 @@
   
             
   
-            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Inst Id'></button>
-            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Inst Name'></button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Instrument Id'></button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Instrument Name'></button>
             <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
             <button  class="btn-btn-info mr-2 float-right btn_style"><i class="ti-export"></i> Export</button>
             <button class="btn-btn-info mr-2 float-right btn_style" (click)="addcalibration(addCalibrationModal)"><i class="fas fa-plus-circle"></i>Add Calibration</button>
