--- a/src/app/ICS/ics-qualification/ics-qualification.component.html
+++ b/src/app/ICS/ics-qualification/ics-qualification.component.html
@@ -9,8 +9,8 @@
                 <h4 class="card-title"></h4>
               </div>
             
-            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Inst Id'></button>
-            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Inst Name'></button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Instrument Id'></button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Instrument Name'></button>
             <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
             <button  class="btn-btn-info mr-2 float-right btn_style"><i class="ti-export"></i> Export</button>
             <button  class="btn-btn-info mr-2 float-right btn_style" (click)="openAddQualificationModal(qualificationModal)"><i class="fas fa-plus-circle"></i>Add Qualification</button>
