--- a/src/app/ICS/ics-parameter/ics-parameter.component.html
+++ b/src/app/ICS/ics-parameter/ics-parameter.component.html
@@ -9,15 +9,24 @@
                 <h4 class="card-title"></h4>
             </div>
             
-            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Inst Id' ></button>
-            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Inst Name'></button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Instrument Id' ></button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Instrument Name'></button>
             <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
-            <button class="btn-btn-info btn_style" (click)="addparameter(addParameterModal)"> <i class="fas fa-plus-circle"></i>Add Parameter</button>
+            <button  class="btn-btn-info mr-2 float-right btn_style"><i class="ti-export"></i> Export</button>
+            <button  class="btn-btn-info mr-2 float-right btn_style" (click)="addparameter(addParameterModal)"><i class="fas fa-plus-circle"></i>Add Parameter</button>
+            
             <hr>
             <div class="table-responsive">
-                <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
+                <ejs-grid [dataSource]='data' [allowSelection]='true' [gridLines]="lines"  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
                     <e-columns>
-                  <e-column field='SrNo' headerText='Sr No' textAlign='Left' width=40></e-column>
+                      <e-column  headerText='Action' width='100'>
+                        <ng-template #template let-data>
+                            <div class="loc">
+                              <button cssClass='small'  ejs-button (click)="editParameter()">  <span class="e-icons e-edit"></span></button>
+                            </div>
+                        </ng-template>
+                    </e-column>
+                  <e-column field='SrNo' headerText='Sr No' textAlign='Left' width=60></e-column>
                   <e-column field='Parameter' headerText='Parameter' width=120></e-column>
                   <e-column field='NominalValue' headerText='Nominal Value' textAlign='Left' format='C2' width=120></e-column>
                   <e-column field='UpperRange' headerText='Upper Range' textAlign='Left' format='yMd' width=120></e-column>
@@ -46,25 +55,25 @@
       <form class="form-horizontal">
         <div class="card-body">
             <div class="form-group row">
-                <label for="fname" class="col-sm-5 control-label col-form-label">Parameter :</label>
+                <label for="fname" class="col-sm-8 control-label col-form-label">Parameter :</label>
                 <div class="col-sm-4">
                     <input type="text" class="form-control" id="parameter" placeholder="">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="lname" class="col-sm-5 control-label col-form-label">Nominal Value :</label>
+                <label for="lname" class="col-sm-8 control-label col-form-label">Nominal Value :</label>
                 <div class="col-sm-4">
                     <input type="text" class="form-control" id="nominalValue" placeholder="">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="email1" class="col-sm-5 control-label col-form-label">Nominal Upper range :</label>
+                <label for="email1" class="col-sm-8 control-label col-form-label">Nominal Upper range :</label>
                 <div class="col-sm-4">
                     <input type="email" class="form-control" id="nominalUpperRange" placeholder="">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="cono1" class="col-sm-5 control-label col-form-label">Nominal Lower range :</label>
+                <label for="cono1" class="col-sm-8 control-label col-form-label">Nominal Lower range :</label>
                 <div class="col-sm-4">
                     <input type="text" class="form-control" id="nominalLowerRange" placeholder="">
                 </div>
