--- a/src/app/ICS/ics-calibrationmaster/ics-calibrationmaster.component.html
+++ b/src/app/ICS/ics-calibrationmaster/ics-calibrationmaster.component.html
@@ -20,17 +20,31 @@
            <hr>
 
            <div class="table-responsive">
-            <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
+            <ejs-grid [dataSource]='data' [allowSelection]='true' [gridLines]="lines"  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
                 <e-columns>
+                  <e-column  headerText='Action' width='100'>
+                    <ng-template #template let-data>
+                        <div class="loc">
+                          <button cssClass='small'  ejs-button (click)="editCalibration()">  <span class="e-icons e-edit"></span></button>
+                        </div>
+                    </ng-template>
+                </e-column>
               <e-column field='SrNo' headerText='Sr No' textAlign='Left' width=90></e-column>
               <e-column field='InstId' headerText='Inst Id' width=150></e-column>
               <e-column field='InstName' headerText='Inst Name' textAlign='Left' format='C2' width=150></e-column>
               <e-column field='FrequencyOfCalibration' headerText='Frequency Of Calibration' textAlign='Left' format='yMd' width=200></e-column>
               <e-column field='DateOfCalibration' headerText='Date Of Calibration' textAlign='Left' width=170></e-column>
               <e-column field='LastDateOfCalibration' headerText='Last Date Of Calibration' textAlign='Left' width=190></e-column>
-              <e-column field='Attachment' headerText='Attachment' width=170></e-column>
+              <!-- <e-column field='Attachment' headerText='Attachment' width=170></e-column> -->
+              <e-column  headerText='Attachment' width='150'>
+                <ng-template #template let-data>
+                    <div class="loc">
+                    <button cssClass='small'  ejs-button (click)="editCalibration()">  <span><img src="assets/images/openfolder.png"  class="dark-logo openFolder" /></span></button>
+                    </div>
+                </ng-template>
+            </e-column>
               <e-column field='Notes' headerText='Notes' textAlign='Left' format='yMd' width=120></e-column>
-              <e-column field='Edit' headerText='Edit' textAlign='Left' width=90></e-column>
+              <!-- <e-column field='Edit' headerText='Edit' textAlign='Left' width=90></e-column> -->
             </e-columns>
               </ejs-grid>
   </div>
