--- a/src/app/ICS/ics-qualification/ics-qualification.component.html
+++ b/src/app/ICS/ics-qualification/ics-qualification.component.html
@@ -16,18 +16,33 @@
             <button  class="btn-btn-info mr-2 float-right btn_style" (click)="openAddQualificationModal(qualificationModal)"><i class="fas fa-plus-circle"></i>Add Qualification</button>
             <hr>
             <div class="table-responsive">
-                <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
+                <ejs-grid [dataSource]='data' [allowSelection]='true' [gridLines]="lines"  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
                     <e-columns>
+                      <e-column  headerText='Action' width='100'>
+                        <ng-template #template let-data>
+                            <div class="loc">
+                              <button cssClass='small'  ejs-button (click)="editQualification()">  <span class="e-icons e-edit"></span></button>
+                            </div>
+                        </ng-template>
+                    </e-column>
                   <e-column field='SrNo' headerText='Sr No' textAlign='Left' width=90></e-column>
                   <e-column field='InstId' headerText='Inst Id' width=150></e-column>
                   <e-column field='InstName' headerText='Inst Name' textAlign='Left' format='C2' width=150></e-column>
-                  <e-column field='LastPerformDate' headerText='Last Perform Date' textAlign='Left' format='yMd' width=200></e-column>
-                  <e-column field='NextDueDate' headerText='Next Due Date' textAlign='Left' width=170></e-column>
-                  <e-column field='SateOfQualification' headerText='Sate Of Qualification' textAlign='Left' width=170></e-column>
+                  <!-- <e-column field='LastPerformedDate' headerText='Last Performed Date' textAlign='Left' format='yMd' width=200></e-column> -->
+                  <!-- <e-column field='NextDueDate' headerText='Next Due Date' textAlign='Left' width=170></e-column> -->
+                  <e-column field='DateOfQualification' headerText='Date Of Qualification' textAlign='Left' width=170></e-column>
                   <e-column field='TypeOfQualification' headerText='Type Of Qualification' width=170></e-column>
-                  <e-column field='Attachment' headerText='Attachment' textAlign='Left' format='C2' width=120></e-column>
+                  <!-- <e-column field='Attachment' headerText='Attachment' textAlign='Left' format='C2' width=120></e-column> -->
+                  <e-column  headerText='Attachment' width='150'>
+                    <ng-template #template let-data>
+                        <div class="loc">
+                        <button cssClass='small'  ejs-button (click)="editQualification()">  <span><img src="assets/images/openfolder.png"  class="dark-logo openFolder" /></span></button>
+                        </div>
+                    </ng-template>
+                </e-column>
+                  <e-column field='PerformedBy' headerText='Performed By' width=170></e-column>
                   <e-column field='Notes' headerText='Notes' textAlign='Left' format='yMd' width=90></e-column>
-                  <e-column field='Edit' headerText='Edit' textAlign='Left' width=50></e-column>
+                  <!-- <e-column field='Edit' headerText='Edit' textAlign='Left' width=50></e-column> -->
                 </e-columns>
                   </ejs-grid>
             </div>
@@ -47,13 +62,17 @@
 
   <div class="modal-body">
     <div class="form-group row">
-        <label for="fname" class="col-sm-2 control-label col-form-label">Instrument Name : </label>
+        <label for="Iname" class="col-sm-2 control-label col-form-label">Instrument Name : </label>
         <div class="col-sm-4">
-            <input type="text" class="form-control" id="parameter" placeholder="">
+            <input type="text" class="form-control" id="Iname" placeholder="">
         </div>
-        <label for="fname" class="col-sm-4 control-label col-form-label ml-auto offset-1 p-l-40">Qualification Type :</label>
+        <label for="Qtype" class="col-sm-4 control-label col-form-label ml-auto offset-1 p-l-40">Qualification Type :</label>
         <div class="col-sm-2 m-0 p-0 dropdown_style">
           <button ejs-dropdownbutton [items]='items2' content='Select'></button>
+        </div>
+        <label for="Pby" class="col-sm-4 control-label col-form-label ml-auto offset-1 p-l-40">Performed By :</label>
+        <div class="col-sm-2 m-0 p-0 dropdown_style">
+          <button ejs-dropdownbutton [items]='items3' content='Select'></button>
         </div>
   </div>
     <hr color="black">
