--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -31,7 +31,7 @@
           <div class="card-body text-white">
               <div class="d-flex flex-row">
                   <div class="display-6 align-self-center">
-                      <i class="ti-user"></i>
+                      <i class="ti-target"></i>
                   </div>
                   <div class="p-10 align-self-center">
                       <h4 class="m-b-0">Instrument Calibration System</h4>
